netbox-kubernetes/netbox-all.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: netbox
  namespace: netbox
  labels:
    app: netbox
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
      - name: netbox
        image: artsn00p/netbox-docker
        ports:
        - containerPort: 8888
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
  labels:
    app: netbox
spec:
  ports:
  - name: nbox
    port: 8888
    targetPort: 8888
  selector:
    app: netbox
