netbox-kubernetes/postgres-all.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: postgres
  namespace: netbox
  labels:
    backend: postgres
spec:
  replicas: 1
  template:
    metadata:
      labels:
        backend: postgres
    spec:
      containers:  
      - image: postgres:9.6-alpine
        name: postgres
        volumeMounts:
        - name: netbox-postgres
          mountPath: /var/lib/postgresql/data
        ports:
        - containerPort: 5432
      restartPolicy: Always
      volumes:
      - name: netbox-postgres
        persistentVolumeClaim:
          claimName: netbox-postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: netbox
  labels:
    backend: postgres
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 5432
    targetPort: 5432
  selector:
    backend: postgres
