netbox-kubernetes/nginx-tls-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-netbox-ingress
  namespace: netbox
spec:
  rules:
  - host: netbox
    http:
      paths:
      - backend:
          serviceName: netbox
          servicePort: 80
  - host: netbox.domain.com
    http:
      paths:
      - backend:
          serviceName: netbox
          servicePort: 80
  tls:
  - secretName: tls-secret
